--- a/style.css
+++ b/style.css
@@ -204,6 +204,7 @@ html{
     background: url(img/about-bg.png) no-repeat;
     background-size: cover;
     background-position: center;
+    padding-bottom: 3rem;
 }
 
 
@@ -249,10 +250,66 @@ width: 100%;
 
 
 
+.newsletter{
+    text-align: center;
+    padding: 5rem 1rem;
+    background:url(img/subscribe-bg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+
+.newsletter h3{
+    color: #fff;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
 
 
 
+.newsletter p{
+    color: #fff;
+    font-size: 1.6rem;
+    margin: 2rem auto;
+    width: 70rem;   
+}
 
+.newsletter form{
+    display: flex;
+    max-width: 70rem;
+    border: .2rem solid #fff;
+    padding: .5rem;
+    border-radius: 5rem;
+    margin: 2rem auto;
+    height: 5.5rem;
+}
+
+.newsletter form input[type="email"]{
+    padding: 0 2rem;
+    font-size: 1.7rem;
+    background:none;
+    width: 100%;
+    color: #fff;
+    text-transform: none;
+    background:none;
+}
+
+.newsletter form input[type="email"]::placeholder{
+    color: #eee;
+    text-transform: capitalize;
+}
+
+.newsletter form input[type="submit"]{
+    background:#fff;
+    width: 20rem;
+    font-size: 1.7rem;
+    border-radius: 5rem;
+    cursor: pointer;
+}
+
+.newsletter form input[type="submit"]:hover{
+    color: var(--pink);
+}
 
 
 
@@ -334,6 +391,11 @@ width: 100%;
             background-position: right;
         }
 
+
+      .newsletter p{
+          width: auto;
+      }
+         
     }
 
 
