--- a/style.css
+++ b/style.css
@@ -311,6 +311,62 @@ width: 100%;
     color: var(--pink);
 }
 
+.review  .box-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+.review  .box-container .box{
+    background: #fff;
+    margin: 1rem;
+    padding: 1rem;
+    text-align: center;
+    position: relative;
+    border:.1rem solid rgba(0,0,0,.2);
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    flex: 1 1 30rem;
+    border-radius: .5rem;
+}
+
+.review  .box-container .box .fa-quote-right{
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    font-size: 8rem;
+    color: var(--pink);
+    opacity: .3;
+}
+.review  .box-container .box .user img{
+    border-radius: 50%;
+    object-fit: cover;
+    height: 7rem;
+    width: 7rem;
+    margin-top: 2rem;
+}
+
+.review  .box-container .box .user h3{
+    color: var(--pink);
+    font-size: 2rem;
+
+}
+
+
+.review  .box-container .box .user .stars i{
+    color: var(--purple);
+    font-size: 1.5rem;
+    padding: 1rem 0;
+    
+}
+
+
+.review  .box-container .box .comment{
+    color: #666;
+    font-size: 1.4rem;
+    
+}
+
 
 
 
