--- a/style.css
+++ b/style.css
@@ -504,8 +504,91 @@ width: 100%;
 }
 
 
+.footer{
+    padding-top: 3rem;
+    background: url(img/footer-bg.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.footer .box-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.footer .box-container .box{
+    flex: 1 1 25rem;
+    margin: 2rem;
+}
 
 
+.footer .box-container .box h3{
+    font-size: 2.5rem;
+    padding: 1rem 0;
+    color: #fff;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+
+}
+
+
+.footer .box-container .box p{
+    font-size: 1.5rem;
+    padding: 5rem 0;
+    color: #eee;
+  
+    
+}
+
+
+.footer .box-container .box a{
+    display: block;
+    font-size: 1.5rem;
+    padding: .5rem 0;
+    color: #eee;
+  
+    
+}
+
+
+.footer .box-container .box a:hover{
+    text-decoration: underline;
+  
+    
+}
+
+
+.footer .box-container .box .info{
+ display: flex;
+ align-items: center;
+  
+    
+}
+
+.footer .box-container .box .info i{
+    margin: .5rem 0;
+    margin-right: 1rem;
+    border-radius: 50%;
+    background: #fff;
+    color: var(--pink);
+    font-size: 1.5rem;
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    line-height: 4.5rem;
+    text-align: center;
+}
+
+.footer .credit{
+    font-size: 2rem;
+    font-weight: normal;
+    letter-spacing: .1rem;
+    color: #fff;
+
+    border-top: .1rem solid #fff5;
+    padding: .5rem 1rem;
+    text-align: center;
+}
 
 
 
